<resources>
    <string name="app_name">Debug Bottle Demo</string>
    <string name="__bad_case">Showcases</string>
    <string name="app_intro">Debug Bottle\'s feature is NOT here. Please finish this Activity, and find the Bottle icon in your android launch pad. To quick access Debug Bottle, you also could click icons above.</string>
    <string name="__introduction">This is Debug Bottle Demo Application.\nThis Activity is NOT Debug Bottle\'s main Activity, it\'s just a demo page for showing bad cases.\nIf this is the first time you have ever installed Debug bottle, please click button below to see how to use it.</string>
    <string name="__read_me">Readme</string>
    <string name="__thread_wait">Thread.wait()</string>
    <string name="__thread_wait_code">
        <![CDATA[Thread.sleep(2000)]]>
    </string>

    <string name="__io_block">io block</string>
    <string name="__io_block_code">fun&#160;readFile()&#160;{\n&#160;&#160;&#160;&#160;var&#160;reader:&#160;FileInputStream?&#160;=&#160;null\n&#160;&#160;&#160;&#160;try&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;reader&#160;=&#160;FileInputStream("/proc/stat")\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;while&#160;(reader.read()&#160;!=&#160;-1);\n&#160;&#160;&#160;&#160;}&#160;catch&#160;(e:&#160;IOException)&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Log.e(DEMO_FRAGMENT,&#160;"readFile:&#160;/proc/stat",&#160;e)\n&#160;&#160;&#160;&#160;}&#160;finally&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;if&#160;(reader&#160;!=&#160;null)&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;try&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;reader.close()\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}&#160;catch&#160;(e:&#160;IOException)&#160;{\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}\n\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}\n&#160;&#160;&#160;&#160;}\n}</string>

    <string name="__computation">computation</string>
    <string name="__computation_code">fun&#160;compute():&#160;Double&#160;{\n&#160;&#160;&#160;&#160;var&#160;result&#160;=&#160;0.0\n&#160;&#160;&#160;&#160;for&#160;(i&#160;in&#160;0..999999)&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;result&#160;+=&#160;Math.acos(Math.cos(i.toDouble()))\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;result&#160;-=&#160;Math.asin(Math.sin(i.toDouble()))\n&#160;&#160;&#160;&#160;}\n&#160;&#160;&#160;&#160;return&#160;result\n}</string>
    <string name="__object_leak">object leak</string>
    <string name="__object_leak_code">object&#160;:&#160;AsyncTask&lt;\Void,&#160;Void,&#160;Void>()&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;override&#160;fun&#160;doInBackground(vararg&#160;params:&#160;Void):&#160;Void?&#160;{\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;//&#160;Do&#160;some&#160;slow&#160;work&#160;in&#160;background\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;SystemClock.sleep(20000)\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;return&#160;null\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}\n&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;}.execute()</string>

    <string name="__send_request">send request</string>
    <string name="__send_request_to_host">send a request to host: http://dev.exyui.com</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="__pref_title_vibrate">Vibrate</string>
    <string name="see_introduction">Debug Bottle Introduction</string>
    <string name="crash_code">Crash code</string>
    <string name="crash_code_content">(null as List&lt;Any>).last()</string>
</resources>
