<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/__top_bar_height"
                android:background="@color/__material_blue">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/__bad_case"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/launch_dt"
                android:gravity="center">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@mipmap/icon_opt"/>

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_margin="40dp"
                    android:src="@drawable/__ic_right_arrow"/>

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/__dt_ic_bottle_64dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="16sp"
                android:text="@string/app_intro"/>

            <Button
                android:id="@+id/introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/__ic_help_outline"
                android:textColor="@android:color/black"
                android:text="@string/see_introduction" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/__introduction"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/__read_me"
                    android:text="@string/__read_me"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__object_leak_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button4"
                    android:text="@string/__object_leak" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__thread_wait_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button1"
                    android:text="@string/__thread_wait" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__io_block_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button2"
                    android:text="@string/__io_block" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__computation_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button3"
                    android:text="@string/__computation" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__send_request_to_host"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button5"
                    android:text="@string/__send_request" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/crash_code_content"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/crash_button"
                    android:text="@string/crash_code" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>