<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/__top_bar_height"
                android:background="@color/__material_blue">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/__bad_case"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/__reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__object_leak_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button4"
                    android:text="@string/__object_leak" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/__reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__thread_wait_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button1"
                    android:text="@string/__thread_wait" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/__reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__io_block_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button2"
                    android:text="@string/__io_block" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/__reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__computation_code"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button3"
                    android:text="@string/__computation" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="@drawable/__reac_gray"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/__send_request_to_host"/>

                <Button
                    style="@style/__RunBtn"
                    android:id="@+id/button5"
                    android:text="@string/__send_request" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>